# SubSyncTFPS

./: CMakeLists.txt
.github/workflows/: windows-build.yml
app/: main.cpp
include/alass/: alass_math.hpp  audio_tap.hpp  fft_math.hpp  srt_parser.hpp
src/: alass_math.cpp  audio_tap.cpp  fft_math.cpp  srt_parser.cpp
